Fix grouping of results on mobile, move PDF icon in certified result

--- a/src/app/modules/tables/components/table/scss/_default.scss
+++ b/src/app/modules/tables/components/table/scss/_default.scss
@@ -33,6 +33,7 @@
           flex: 1;
           justify-content: space-between;
           padding: 0 16px;
+          position: static;
 
           mat-icon {
             flex: none;
